--- a/autosite/app/templates/create_listing.html
+++ b/autosite/app/templates/create_listing.html
@@ -7,6 +7,7 @@
       <h2>{% trans "Izveidot sludinājumu" %}</h2>
       <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
+        {{ form.errors }}
         {{ form.as_p }}
         <button type="submit">{% trans "Izveidot" %}</button>
       </form>
