fixed translation tags

--- a/autosite/app/templates/create_listing.html
+++ b/autosite/app/templates/create_listing.html
@@ -7,7 +7,15 @@
       <h2>{% trans "Izveidot sludinājumu" %}</h2>
       <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ form.errors }}
+        {% if form.errors and form.errors.Price %}
+          <div class="errors">
+            <ul>
+              {% for error in form.errors.Price %}
+                <li>{{ error }}</li>
+              {% endfor %}
+            </ul>
+          </div>
+        {% endif %}
         {{ form.as_p }}
         <button type="submit">{% trans "Izveidot" %}</button>
       </form>
