--- a/autosite/app/templates/listing_list.html
+++ b/autosite/app/templates/listing_list.html
@@ -96,7 +96,7 @@
             {% if user.is_staff or user == listing.User %}
               <form method="POST" action="{% url 'delete_listing' listing.id %}">
                 {% csrf_token %}
-                <input type="submit" value="Delete">
+                <input type="submit" value={%trans "Dzēst"%}>
               </form>
             {% endif %}
           {% endif %}
